--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>hw-11-color-switch</title>
   </head>
   <body>
-    <button type="button" data-action="start">Start</button>
-    <button type="button" data-action="stop">Stop</button>
+    <button type="button" data-action="start" class="button">Start</button>
+    <button type="button" data-action="stop" class="button">Stop</button>
     <script src="index.js" type="module"></script>
   </body>
 </html>
